vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/pd-empty-struct.stderr
error: cannot derive `H5Type` for empty structs
 --> tests/compile-fail/pd-empty-struct.rs:8:8
  |
8 | struct Foo<T> {
  |        ^^^
